--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,99 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<!-- Mirrored from preview.colorlib.com/theme/fox/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 28 Apr 2024 18:27:54 GMT -->
-
-<head>
-  <title>Fox University - Free Bootstrap 4 Template by Colorlib</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&amp;display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
-  <link rel="stylesheet" href="css/animate.css">
-  <link rel="stylesheet" href="css/owl.carousel.min.css">
-  <link rel="stylesheet" href="css/owl.theme.default.min.css">
-  <link rel="stylesheet" href="css/magnific-popup.css">
-  <link rel="stylesheet" href="css/aos.css">
-  <link rel="stylesheet" href="css/ionicons.min.css">
-  <link rel="stylesheet" href="css/flaticon.css">
-  <link rel="stylesheet" href="css/icomoon.css">
-  <link rel="stylesheet" href="css/style.css">
-  <script
-    nonce="c99d4742-2d30-43b5-874f-42cf5bab1148">try { (function (w, d) { !function (j, k, l, m) { j[l] = j[l] || {}; j[l].executed = []; j.zaraz = { deferred: [], listeners: [] }; j.zaraz._v = "5592"; j.zaraz.q = []; j.zaraz._f = function (n) { return async function () { var o = Array.prototype.slice.call(arguments); j.zaraz.q.push({ m: n, a: o }) } }; for (const p of ["track", "set", "debug"]) j.zaraz[p] = j.zaraz._f(p); j.zaraz.init = () => { var q = k.getElementsByTagName(m)[0], r = k.createElement(m), s = k.getElementsByTagName("title")[0]; s && (j[l].t = k.getElementsByTagName("title")[0].text); j[l].x = Math.random(); j[l].w = j.screen.width; j[l].h = j.screen.height; j[l].j = j.innerHeight; j[l].e = j.innerWidth; j[l].l = j.location.href; j[l].r = k.referrer; j[l].k = j.screen.colorDepth; j[l].n = k.characterSet; j[l].o = (new Date).getTimezoneOffset(); if (j.dataLayer) for (const w of Object.entries(Object.entries(dataLayer).reduce(((x, y) => ({ ...x[1], ...y[1] })), {}))) zaraz.set(w[0], w[1], { scope: "page" }); j[l].q = []; for (; j.zaraz.q.length;) { const z = j.zaraz.q.shift(); j[l].q.push(z) } r.defer = !0; for (const A of [localStorage, sessionStorage]) Object.keys(A || {}).filter((C => C.startsWith("_zaraz_"))).forEach((B => { try { j[l]["z_" + B.slice(7)] = JSON.parse(A.getItem(B)) } catch { j[l]["z_" + B.slice(7)] = A.getItem(B) } })); r.referrerPolicy = "origin"; r.src = "https://preview.colorlib.com/cdn-cgi/zaraz/s.js?z=" + btoa(encodeURIComponent(JSON.stringify(j[l]))); q.parentNode.insertBefore(r, q) };["complete", "interactive"].includes(k.readyState) ? zaraz.init() : j.addEventListener("DOMContentLoaded", zaraz.init) }(w, d, "zarazData", "script"); })(window, document) } catch (e) { throw fetch("/cdn-cgi/zaraz/t"), e; };</script>
-</head>
-
-<body>
-  <div class="bg-top navbar-light">
-    <div class="container">
-      <div class="row no-gutters d-flex align-items-center align-items-stretch">
-        <div class="col-md-4 d-flex align-items-center py-4">
-          <a class="navbar-brand" href="index.html">Fox. <span>University</span></a>
-        </div>
-        <div class="col-lg-8 d-block">
-          <div class="row d-flex">
-            <div class="col-md d-flex topper align-items-center align-items-stretch py-md-4">
-              <div class="icon d-flex justify-content-center align-items-center"><span class="icon-paper-plane"></span>
-              </div>
-              <div class="text">
-                <span>Email</span>
-                <span><a href="https://preview.colorlib.com/cdn-cgi/l/email-protection" class="__cf_email__"
-                    data-cfemail="f58c9a80879098949c99b59098949c99db969a98">[email&#160;protected]</a></span>
-              </div>
-            </div>
-            <div class="col-md d-flex topper align-items-center align-items-stretch py-md-4">
-              <div class="icon d-flex justify-content-center align-items-center"><span class="icon-phone2"></span></div>
-              <div class="text">
-                <span>Call</span>
-                <span>Call Us: + 1235 2355 98</span>
-              </div>
-            </div>
-            <div class="col-md topper d-flex align-items-center justify-content-end">
-              <p class="mb-0">
-                <a href="#" class="btn py-2 px-3 btn-primary d-flex align-items-center justify-content-center">
-                  <span>Apply now</span>
-                </a>
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco-navbar-light" id="ftco-navbar">
-    <div class="container d-flex align-items-center px-4">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
-        aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="oi oi-menu"></span> Menu
-      </button>
-      <form action="#" class="searchform order-lg-last">
-        <div class="form-group d-flex">
-          <input type="text" class="form-control pl-3" placeholder="Search">
-          <button type="submit" placeholder class="form-control search"><span class="ion-ios-search"></span></button>
-        </div>
-      </form>
-      <div class="collapse navbar-collapse" id="ftco-nav">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item"><a href="index.html" class="nav-link pl-0">Home</a></li>
-          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-          <li class="nav-item"><a href="courses.html" class="nav-link">Courses</a></li>
-          <li class="nav-item"><a href="teacher.html" class="nav-link">Staff</a></li>
-          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-          <li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_1.jpg');">
+{% extends 'base.html'%}
+{% load static %}
+{% block content%}
+  <section class="hero-wrap hero-wrap-2" style="background-image: url('static/images/bg_1.jpg');">
     <div class="overlay"></div>
     <div class="container">
       <div class="row no-gutters slider-text align-items-center justify-content-center">
         <div class="col-md-9 ftco-animate text-center">
           <h1 class="mb-2 bread">Contact Us</h1>
-          <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i
-                  class="ion-ios-arrow-forward"></i></a></span> <span>Contact <i
-                class="ion-ios-arrow-forward"></i></span></p>
+          <p class="breadcrumbs"><span class="mr-2"><a href='/'> Home <i class="ion-ios-arrow-forward"></i></a></span><span> Contact <i class="ion-ios-arrow-forward"></i></span></p>
         </div>
       </div>
     </div>
@@ -104,22 +18,20 @@
         <div class="col-md-3 d-flex">
           <div class="bg-light align-self-stretch box p-4 text-center">
             <h3 class="mb-4">Address</h3>
-            <p>198 West 21th Street, Suite 721 New York NY 10016</p>
+            <p>Abdulla Qahhor 62-uy, Boston MFY Bekobod tuman, Toshkent viloyati</p>
           </div>
         </div>
         <div class="col-md-3 d-flex">
           <div class="bg-light align-self-stretch box p-4 text-center">
             <h3 class="mb-4">Contact Number</h3>
-            <p><a href="tel://1234567920">+ 1235 2355 98</a></p>
+            <p><a href="tel://1234567920">+998 94 733 16 07</a></p>
           </div>
         </div>
         <div class="col-md-3 d-flex">
           <div class="bg-light align-self-stretch box p-4 text-center">
             <h3 class="mb-4">Email Address</h3>
             <p><a
-                href="https://preview.colorlib.com/cdn-cgi/l/email-protection#fd94939b92bd8492888f8e948998d39e9290"><span
-                  class="__cf_email__"
-                  data-cfemail="cba2a5ada48bb2a4beb9b8a2bfaee5a8a4a6">[email&#160;protected]</span></a></p>
+                href="https://preview.colorlib.com/cdn-cgi/l/email-protection#fd94939b92bd8492888f8e948998d39e9290"><span data-cfemail="cba2a5ada48bb2a4beb9b8a2bfaee5a8a4a6"></span>backendchibola@gmail.com</a></p>
           </div>
         </div>
         <div class="col-md-3 d-flex">
@@ -135,18 +47,16 @@
     <div class="container">
       <div class="row d-flex align-items-stretch no-gutters">
         <div class="col-md-6 p-4 p-md-5 order-md-last bg-light">
-          <form action="#">
+          <form method='post'>
+            {% csrf_token %}
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Your Name">
+              <input type="text" class="form-control" id='name' name='name' placeholder="Your Name">
             </div>
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Your Email">
+              <input type="number" class="form-control"  id='phone_number' name='phone_number' placeholder="Your Phone number">
             </div>
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Subject">
-            </div>
-            <div class="form-group">
-              <textarea name id cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+              <textarea cols="30" rows="7" class="form-control" id='message' name='message' placeholder="Message"></textarea>
             </div>
             <div class="form-group">
               <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
@@ -154,139 +64,9 @@
           </form>
         </div>
         <div class="col-md-6 d-flex align-items-stretch">
-          <div id="map"></div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d95911.05971916972!2d69.2125696!3d41.304064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2s!4v1715179096136!5m2!1sru!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
     </div>
   </section>
-  <footer class="ftco-footer ftco-bg-dark ftco-section">
-    <div class="container">
-      <div class="row mb-5">
-        <div class="col-md-6 col-lg-3">
-          <div class="ftco-footer-widget mb-5">
-            <h2 class="ftco-heading-2">Have a Questions?</h2>
-            <div class="block-23 mb-3">
-              <ul>
-                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San
-                    Francisco, California, USA</span></li>
-                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-                <li><a href="#"><span class="icon icon-envelope"></span><span class="text"><span class="__cf_email__"
-                        data-cfemail="026b6c646d427b6d7770666d6f636b6c2c616d6f">[email&#160;protected]</span></span></a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3">
-          <div class="ftco-footer-widget mb-5">
-            <h2 class="ftco-heading-2">Recent Blog</h2>
-            <div class="block-21 mb-4 d-flex">
-              <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
-              <div class="text">
-                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-                <div class="meta">
-                  <div><a href="#"><span class="icon-calendar"></span> June 27, 2019</a></div>
-                  <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-                  <div><a href="#"><span class="icon-chat"></span> 19</a></div>
-                </div>
-              </div>
-            </div>
-            <div class="block-21 mb-5 d-flex">
-              <a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
-              <div class="text">
-                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-                <div class="meta">
-                  <div><a href="#"><span class="icon-calendar"></span> June 27, 2019</a></div>
-                  <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-                  <div><a href="#"><span class="icon-chat"></span> 19</a></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3">
-          <div class="ftco-footer-widget mb-5 ml-md-4">
-            <h2 class="ftco-heading-2">Links</h2>
-            <ul class="list-unstyled">
-              <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
-              <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>About</a></li>
-              <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Services</a></li>
-              <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Deparments</a></li>
-              <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3">
-          <div class="ftco-footer-widget mb-5">
-            <h2 class="ftco-heading-2">Subscribe Us!</h2>
-            <form action="#" class="subscribe-form">
-              <div class="form-group">
-                <input type="text" class="form-control mb-2 text-center" placeholder="Enter email address">
-                <input type="submit" value="Subscribe" class="form-control submit px-3">
-              </div>
-            </form>
-          </div>
-          <div class="ftco-footer-widget mb-5">
-            <h2 class="ftco-heading-2 mb-0">Connect With Us</h2>
-            <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
-              <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-              <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-              <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <p>
-            Copyright &copy;
-            <script data-cfasync="false"
-              src="https://preview.colorlib.com/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-            <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with
-            <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com/"
-              target="_blank">Colorlib</a>
-          </p>
-        </div>
-      </div>
-    </div>
-  </footer>
-
-  <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
-      <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
-      <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
-        stroke="#F96D00" />
-    </svg></div>
-  <script src="js/jquery.min.js"></script>
-  <script src="js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/jquery.easing.1.3.js"></script>
-  <script src="js/jquery.waypoints.min.js"></script>
-  <script src="js/jquery.stellar.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
-  <script src="js/aos.js"></script>
-  <script src="js/jquery.animateNumber.min.js"></script>
-  <script src="js/scrollax.min.js"></script>
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&amp;sensor=false"></script>
-  <script src="js/google-map.js"></script>
-  <script src="js/main.js"></script>
-
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'UA-23581568-13');
-  </script>
-  <script defer src="https://static.cloudflareinsights.com/beacon.min.js/v55bfa2fee65d44688e90c00735ed189a1713218998793"
-    integrity="sha512-FIKRFRxgD20moAo96hkZQy/5QojZDAbyx0mQ17jEGHCJc/vi0G2HXLtofwD7Q3NmivvP9at5EVgbRqOaOQb+Rg=="
-    data-cf-beacon='{"rayId":"87b91a443e622e13","version":"2024.4.0","token":"cd0b4b3a733644fc843ef0b185f98241"}'
-    crossorigin="anonymous"></script>
-</body>
-
-<!-- Mirrored from preview.colorlib.com/theme/fox/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 28 Apr 2024 18:27:54 GMT -->
-
-</html>
+ {% endblock %}
